Tried to add in filter and onTextChange but am not referencing array correctly. Null pointers

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,5 +12,6 @@
         android:orderInCategory="101"
         android:icon="@android:drawable/ic_menu_search"
         android:title="@string/activity_search"
+        app:actionViewClass="android.widget.SearchView"
         app:showAsAction="ifRoom" />
 </menu>
