--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,10 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.niklas.gcu.moblieplatformcw.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_All"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/action_all"
+        app:showAsAction="collapseActionView" />
+    <item
+        android:id="@+id/action_A-z"
+        android:orderInCategory="100"
+        android:title="@string/action_Az"
+        app:showAsAction="collapseActionView" />
+    <item
+        android:id="@+id/action_magnitude"
+        android:orderInCategory="100"
+        android:title="@string/action_magnitude"
+        app:showAsAction="collapseActionView" />
     <item
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_menu_search"
