--- a/app/src/main/res/layout-land/activity_earthquake.xml
+++ b/app/src/main/res/layout-land/activity_earthquake.xml
@@ -74,6 +74,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvPubDate"
                 tools:text="@string/earthquake_details" />
+
+            <TextView
+                android:id="@+id/studentID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/id_student"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tvDetails" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
