--- a/app/src/main/res/layout/activity_earthquake.xml
+++ b/app/src/main/res/layout/activity_earthquake.xml
@@ -74,4 +74,17 @@
         app:layout_constraintTop_toBottomOf="@+id/tvPubDate"
         tools:text="@string/earthquake_details" />
 
+    <TextView
+        android:id="@+id/studentID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/id_student"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDetails" />
+
 </android.support.constraint.ConstraintLayout>
