--- a/app/src/main/res/layout/activity_earthquake.xml
+++ b/app/src/main/res/layout/activity_earthquake.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
-        android:textAlignment="viewStart"
+        android:textAlignment="textEnd"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
