--- a/app/src/main/res/layout/list_record.xml
+++ b/app/src/main/res/layout/list_record.xml
@@ -45,16 +45,16 @@
         app:layout_constraintTop_toBottomOf="@+id/tvMagnitude"
         tools:text="@string/earthquake_date" />
 
-    <TextView
-        android:id="@+id/tvDetails"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvPubDate"
-        tools:text="@string/earthquake_details" />
+    <!--<TextView-->
+        <!--android:id="@+id/tvDetails"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="16dp"-->
+        <!--android:layout_marginEnd="16dp"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/tvPubDate"-->
+        <!--tools:text="@string/earthquake_details" />-->
 </android.support.constraint.ConstraintLayout>
