--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,10 +6,10 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:textColorSecondary">@color/secondary_text</item>
-        <item name="android:textColorPrimary">@color/iconColor</item>
+        <item name="android:textColorPrimary">@color/white</item>
         <item name="android:datePickerDialogTheme">@style/MyDatePickerDialogTheme</item>
-        <item name="actionMenuTextAppearance">@color/iconColor</item>
-        <item name="actionBarWidgetTheme">@color/iconColor</item>
+        <item name="actionMenuTextAppearance">@color/white</item>
+        <item name="actionBarWidgetTheme">@color/white</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="MyDatePickerDialogTheme" parent="android:Theme.Material.Light.Dialog">
