Refactored package names and added in Name, StudentID, Programme of Study

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,3 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+//
+// Name                 Niklas Olsson
+// Student ID           S1434184
+// Programme of Study   Computing
+//
+-->
 <resources>
     <!--
     TODO: Before you run your application, you need a Google Maps API key.
