--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -8,19 +8,9 @@
 -->
 <resources>
     <!--
-    TODO: Before you run your application, you need a Google Maps API key.
-
-    To get one, follow this link, follow the directions and press "Create" at the end:
-
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=FD:06:48:46:CE:AB:00:9F:55:1F:4A:DA:2E:96:32:6A:92:8D:AB:DB%3Bcom.niklas.gcu.moblieplatformcw
+    TODO: Before you run this application, you need a Google Maps API key.
 
     You can also add your credentials to an existing key, using these values:
-
-    Package name:
-    FD:06:48:46:CE:AB:00:9F:55:1F:4A:DA:2E:96:32:6A:92:8D:AB:DB
-
-    SHA-1 certificate fingerprint:
-    FD:06:48:46:CE:AB:00:9F:55:1F:4A:DA:2E:96:32:6A:92:8D:AB:DB
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
@@ -28,5 +18,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBjpv5LD3sZSzaTrzXR74i7UnhjrxTOpkM</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"></string>
 </resources>
