--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -42,25 +42,64 @@
                 <item
                     android:id="@+id/action_A-z"
                     android:orderInCategory="5"
-                    android:title="@string/action_Az"
-                    app:showAsAction="collapseActionView" />
+                    android:title="@string/action_alphabetically"
+                    app:showAsAction="collapseActionView">
+                    <menu>
+                        <group>
+                            <item
+                                android:id="@+id/action_Az"
+                                android:title="@string/action_Az">
+
+                            </item>
+                            <item
+                                android:id="@+id/action_Za"
+                                android:title="@string/action_Za"></item>
+                        </group>
+                    </menu>
+                </item>
                 <item
                     android:id="@+id/action_magnitude"
                     android:orderInCategory="6"
                     android:title="@string/action_magnitude"
-                    app:showAsAction="collapseActionView" />
+                    app:showAsAction="collapseActionView" >
+                    <menu>
+                        <group>
+                            <item
+                                android:id="@+id/action_highest"
+                                android:title="@string/action_highest">
+
+                            </item>
+                            <item
+                                android:id="@+id/action_lowest"
+                                android:title="@string/action_lowest"></item>
+                        </group>
+                    </menu>
+                </item>
                 <item
                     android:id="@+id/action_depth"
                     android:orderInCategory="7"
                     android:title="@string/action_depth"
-                    app:showAsAction="collapseActionView" />
+                    app:showAsAction="collapseActionView" >
+                    <menu>
+                        <group>
+                            <item
+                                android:id="@+id/action_deep"
+                                android:title="@string/action_highest">
+
+                            </item>
+                            <item
+                                android:id="@+id/action_shallow"
+                                android:title="@string/action_lowest"></item>
+                        </group>
+                    </menu>
+                </item>
                 <item
                     android:id="@+id/action_coordinates"
                     android:orderInCategory="8"
                     android:title="@string/action_coordinates"
                     app:showAsAction="collapseActionView">
                     <menu>
-                        <group android:id="@+id/group2">
+                        <group android:id="@+id/group3">
                             <item
                                 android:id="@+id/action_north"
                                 android:title="@string/action_north" />
