--- a/app/src/main/res/layout-land/activity_earthquake.xml
+++ b/app/src/main/res/layout-land/activity_earthquake.xml
@@ -32,6 +32,17 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <TextView
+            android:id="@+id/tvTime"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvPubDate"
+            tools:text="@string/earthquake_time" />
+
+        <TextView
             android:id="@+id/tvLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -81,8 +92,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvPubDate"
+            app:layout_constraintTop_toBottomOf="@+id/tvTime"
             tools:text="@string/earthquake_depth" />
 
         <TextView
